--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <h1>This is a test.</h1>
+    <h1>Making changes to practice.</h1>
   </body>
 </html>
