parallax complete, basic structure

--- a/working.html
+++ b/working.html
@@ -7,24 +7,59 @@
     <link href="main.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="landscape">
-      <h1 class="title">Visit Myanmar</h1>
+    <div id="placeholder"></div>
+    <div id="navBar">
+      <ul>
+        <li>
+          <a href=""><img src="assets/github.svg" alt="github" /></a>
+        </li>
+        <li>
+          <a href=""><img src="assets/linkedin.svg" alt="linkedIn" /></a>
+        </li>
+        <li>
+          <a href=""> <img src="assets/resume.svg" alt="resume" /></a>
+        </li>
+        <li>
+          <a href=""><img src="assets/email.svg" alt="contact" /></a>
+        </li>
+      </ul>
+    </div>
+    <div id="top">
+      <h1>Robert Bishop</h1>
+      <h3>Jr Full Stack<br />Web Developer</h3>
+      <img src="assets/downArrow.svg" alt="down arrow" />
     </div>
 
-    <p>
-      Descriptions to come. Lorem ipsum dolor sit amet, consectetur adipiscing
-      elit. Integer consectetur, libero eget bibendum elementum, lorem orci
-      rutrum justo, at fermentum neque felis ac ex. Phasellus suscipit dapibus
-      ante, eu sodales risus sagittis ut. Phasellus eget augue purus. Sed eget
-      auctor felis, egestas vestibulum augue. Aenean pharetra metus quis orci
-      consequat dapibus. Integer aliquam aliquet ipsum ut pellentesque.
-      Curabitur cursus, nibh ut vehicula maximus, eros libero pretium diam, eu
-      luctus nisl mauris a augue. Nulla luctus in orci non vulputate.
-      Suspendisse at tortor elit.
-    </p>
+    <div id="middle">
+      <img id="bioPic" src="assets/bioPic.png" alt="bioPic" />
+      <p class="personalStatement">
+        I am an enthusiastic, self-disciplined and motivated worker. I have
+        demonstrated in my past employment an ability to work on teams and with
+        management, as well as learn new skills and work remotely. My experience
+        at PunchCode has opened a world of excitement and opportunity and I am
+        enjoying making consistent progress towards my goal of becoming a more
+        seasoned developer.
+      </p>
+    </div>
 
-    <div id="monkeys">
-      <h1 class="title">Book my trip now</h1>
+    <div id="bottom">
+      <h1>Projects</h1>
+    </div>
+    <div id="footer">
+      <ul>
+        <li>
+          <a href=""><img src="assets/github.svg" alt="github" /></a>
+        </li>
+        <li>
+          <a href=""><img src="assets/linkedin.svg" alt="linkedIn" /></a>
+        </li>
+        <li>
+          <a href=""> <img src="assets/resume.svg" alt="resume" /></a>
+        </li>
+        <li>
+          <a href=""><img src="assets/email.svg" alt="contact" /></a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
