added placeholders for project imgs

--- a/working.html
+++ b/working.html
@@ -44,7 +44,28 @@
 
     <div id="bottom">
       <h1>Projects</h1>
+      <p>
+        During my time at PunchCode, I worked on several projects that
+        progressed in size and complexity. Here are a few of the projects that I
+        worked on during the course including a video bio, presentation and
+        walkthrough of my final capstone project Jurn(ease). I am currently
+        working on new projects and will continue to add them to this page.
+        <br />
+        <span>...scroll<img src="assets/rightArrow.svg" /></span>
+      </p>
+
+      <div id="projects">
+        <a href=""><img src="https://place-hold.it/200X150" /></a>
+        <a href=""><img src="https://place-hold.it/200X150" /></a>
+        <a href=""><img src="https://place-hold.it/200X150" /></a>
+        <a href=""><img src="https://place-hold.it/200X150" /></a>
+        <a href=""><img src="https://place-hold.it/200X150" /></a>
+        <a href=""><img src="https://place-hold.it/200X150" /></a>
+        <a href=""><img src="https://place-hold.it/200X150" /></a>
+        <a href=""><img src="https://place-hold.it/200X150" /></a>
+      </div>
     </div>
+
     <div id="footer">
       <ul>
         <li>
