added memory project link

--- a/working.html
+++ b/working.html
@@ -11,16 +11,26 @@
     <div id="navBar">
       <ul>
         <li>
-          <a href=""><img src="assets/github.svg" alt="github" /></a>
+          <a href="https://github.com/rbishop2006" target="_blank"
+            ><img src="assets/github.svg" alt="github"
+          /></a>
         </li>
         <li>
-          <a href=""><img src="assets/linkedin.svg" alt="linkedIn" /></a>
+          <a
+            href="https://www.linkedin.com/in/robert-bishop-3837b61/"
+            target="_blank"
+            ><img src="assets/linkedin.svg" alt="linkedIn"
+          /></a>
         </li>
         <li>
-          <a href=""> <img src="assets/resume.svg" alt="resume" /></a>
+          <a href="assets/resume.pdf" target="_blank">
+            <img src="assets/resume.svg" alt="resume"
+          /></a>
         </li>
         <li>
-          <a href=""><img src="assets/email.svg" alt="contact" /></a>
+          <a href="mailto:rbishop2006@gmail.com"
+            ><img src="assets/email.svg" alt="contact"
+          /></a>
         </li>
       </ul>
     </div>
@@ -34,29 +44,33 @@
       <img id="bioPic" src="assets/bioPic.png" alt="bioPic" />
       <p class="personalStatement">
         I am an enthusiastic, self-disciplined and motivated worker. I have
-        demonstrated in my past employment an ability to work on teams and with
-        management, as well as learn new skills and work remotely. My experience
-        at PunchCode has opened a world of excitement and opportunity and I am
-        enjoying making consistent progress towards my goal of becoming a more
-        seasoned developer.
+        demonstrated an ability to work on teams and with management, as well as
+        learn new skills and work remotely. My experience at PunchCode has
+        opened a world of excitement and opportunity and I am enjoying making
+        consistent progress towards my goal of becoming a more seasoned
+        developer.
       </p>
     </div>
 
     <div id="bottom">
       <h1>Projects</h1>
+      <br />
       <p>
         During my time at PunchCode, I worked on several projects that
         progressed in size and complexity. Here are a few of the projects that I
         worked on during the course including a video bio, presentation and
         walkthrough of my final capstone project Jurn(ease). I am currently
         working on new projects and will continue to add them to this page.
-        <br />
-        <span>...scroll<img src="assets/rightArrow.svg" /></span>
       </p>
+      <img id="scroll" src="assets/downArrow.svg" alt="down arrow" />
 
       <div id="projects">
-        <a href=""><img src="https://place-hold.it/200X150" /></a>
-        <a href=""><img src="https://place-hold.it/200X150" /></a>
+        <a href="http://robertbishopdev.com/Memory/" target="_blank"
+          ><img src="assets/memory.png" width="200" height="150"
+        /></a>
+        <a href="http://robertbishopdev.com/react-todo/" target="_blank"
+          ><img src="https://place-hold.it/200X150"
+        /></a>
         <a href=""><img src="https://place-hold.it/200X150" /></a>
         <a href=""><img src="https://place-hold.it/200X150" /></a>
         <a href=""><img src="https://place-hold.it/200X150" /></a>
@@ -69,16 +83,28 @@
     <div id="footer">
       <ul>
         <li>
-          <a href=""><img src="assets/github.svg" alt="github" /></a>
+          <a href="https://github.com/rbishop2006" target="_blank"
+            ><img src="assets/github.svg" alt="github"
+          /></a>
         </li>
         <li>
-          <a href=""><img src="assets/linkedin.svg" alt="linkedIn" /></a>
+          <a
+            href="https://www.linkedin.com/in/robert-bishop-3837b61/"
+            target="_blank"
+            ><img src="assets/linkedin.svg" alt="linkedIn"
+          /></a>
         </li>
         <li>
-          <a href=""> <img src="assets/resume.svg" alt="resume" /></a>
+          <a href="assets/resume.pdf" target="_blank">
+            <img src="assets/resume.svg" alt="resume"
+          /></a>
         </li>
         <li>
-          <a href=""><img src="assets/email.svg" alt="contact" /></a>
+          <a href="mailto:rbishop2006@gmail.com"
+            ><img src="assets/email.svg" alt="contact" /><span
+              >rbishop2006@gmail.com</span
+            ></a
+          >
         </li>
       </ul>
     </div>
