--- a/working.html
+++ b/working.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Working</title>
-    <link href="main.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/navBar.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/middle.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/projects.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/footer.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="placeholder"></div>
@@ -57,26 +61,79 @@
       <br />
       <p>
         During my time at PunchCode, I worked on several projects that
-        progressed in size and complexity. Here are a few of the projects that I
-        worked on during the course including a video bio, presentation and
-        walkthrough of my final capstone project Jurn(ease). I am currently
-        working on new projects and will continue to add them to this page.
+        progressed in size and complexity. Here are just a few of the projects
+        that I worked on during the course including a video bio, presentation
+        and walkthrough of my final capstone project Jurn(ease).
+        <br /><br />I am currently working on new projects and will continue to
+        add them to this page.
       </p>
       <img id="scroll" src="assets/downArrow.svg" alt="down arrow" />
 
       <div id="projects">
+        <a
+          href="http://robertbishopdev.com/Create-Etsy-Search-Page/"
+          target="_blank"
+          ><span>Etsy Look-alike / JS-JQuery</span
+          ><img
+            src="assets/etsyCreate.png"
+            width="200"
+            height="150"
+            alt="Etsy Look-alike"
+        /></a>
+        <a href="https://youtu.be/pT18Us8sayw" target="_blank"
+          ><span>2 min Jurn(ease) Presentation</span
+          ><img
+            src="assets/jurn(ease)Presentation.png"
+            width="200"
+            height="150"
+            alt="Jurn(ease) Presentation"
+        /></a>
+        <a href="https://demoday.punchcode.org/project/1" target="_blank"
+          ><span>Jurn(ease) Capstone / React</span
+          ><img
+            src="assets/jurn(ease).png"
+            width="200"
+            height="150"
+            alt="Jurn(ease) Demo walkthrough video"
+        /></a>
         <a href="http://robertbishopdev.com/Memory/" target="_blank"
-          ><img src="assets/memory.png" width="200" height="150"
+          ><span>Memory / JS-JQuery</span
+          ><img
+            id="memory"
+            src="assets/memory.png"
+            width="200"
+            height="150"
+            alt="Memory"
         /></a>
-        <a href="http://robertbishopdev.com/react-todo/" target="_blank"
-          ><img src="https://place-hold.it/200X150"
+        <a
+          href="https://github.com/rbishop2006/react-photo-albums"
+          target="_blank"
+          ><span>Photo Album-repo / React</span
+          ><img
+            src="assets/photoAlbum.png"
+            width="200"
+            height="150"
+            alt="Photo album"
         /></a>
-        <a href=""><img src="https://place-hold.it/200X150" /></a>
-        <a href=""><img src="https://place-hold.it/200X150" /></a>
-        <a href=""><img src="https://place-hold.it/200X150" /></a>
-        <a href=""><img src="https://place-hold.it/200X150" /></a>
-        <a href=""><img src="https://place-hold.it/200X150" /></a>
-        <a href=""><img src="https://place-hold.it/200X150" /></a>
+        <a
+          href="https://github.com/rbishop2006/react-shopping-cart"
+          target="_blank"
+          ><span>Shopping Cart-repo / React</span
+          ><img
+            src="assets/shoppingCart.png"
+            width="200"
+            height="150"
+            alt="Shopping Cart"
+        /></a>
+
+        <a href="https://youtu.be/dUDo47D2mQ8" target="_blank"
+          ><span>Bio Video</span
+          ><img
+            src="assets/bioVid.png"
+            width="200"
+            height="150"
+            alt="Bio Video"
+        /></a>
       </div>
     </div>
 
