made projects section larger

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         developer.
       </p>
     </div>
-
     <div id="bottom">
-      <h1>Projects</h1>
+      <img id="secondDownArrow" src="assets/downArrow.svg" alt="down arrow" />
       <br />
+      <span id="projectsHeader">Projects</span>
       <p>
         During my time at PunchCode, I worked on several projects that
         progressed in size and complexity. Here are just a few of the projects
@@ -67,7 +67,9 @@
         <br /><br />I am currently working on new projects and will continue to
         add them to this page.
       </p>
+      <br />
       <img id="scroll" src="assets/downArrow.svg" alt="down arrow" />
+      <br />
 
       <div id="projects">
         <a
@@ -135,6 +137,7 @@
             alt="Bio Video"
         /></a>
       </div>
+      <div id="spacer"></div>
     </div>
 
     <div id="footer">
