changing path of shopping cart

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             alt="Photo album"
         /></a>
         <a
-          href="https://github.com/rbishop2006/react-shopping-cart"
+          href="http://robertbishopdev.com/react-shopping-cart/"
           target="_blank"
           ><span>Shopping Cart-repo / React</span
           ><img
