changes to update resume

--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
           <div>
             <p class="personalStatement">
               I am an enthusiastic, self-disciplined and motivated worker. I
-              have demonstrated an ability to work on teams and with management,
-              as well as learn new skills and work remotely. My experience at
-              PunchCode opened a world of excitement and opportunity and I am
-              enjoying making consistent progress towards my goal of becoming a
-              more seasoned developer.
+              have the ability to work on teams and with management, as well as
+              learn new skills and work remotely. I would like to find a work
+              environment where I can continue to learn from others while
+              becoming a valuable member of a team.
             </p>
           </div>
         </div>
@@ -104,9 +103,7 @@
         <div class="specialize-info">
           <h2>I specialize in</h2>
           <div class="small-line"></div>
-          <p>
-            Responsive websites using these technologies.
-          </p>
+          <p>Responsive websites using these technologies.</p>
         </div>
         <div class="specialize-icons">
           <ul>
