--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,13 @@
       <!-- Capstone Project -->
       <section id="capstone-project">
         <div class="long-line"></div>
+        <h2>CURRENT WORK</h2>
+        <h3>TruLocal, Inc - Primary responsibility on Search Route</h3>
+        <a href="https://trulocal.com/" target="_blank" class="btn"
+          >www.trulocal.com</a
+        >
+        <div class="long-line"></div>
+        <div class="long-line"></div>
         <h2>CAPSTONE PROJECT</h2>
         <h3>
           J<span class="lowercase">urn</span>(<span>ease</span>) - Built with
