--- a/resume.html
+++ b/resume.html
@@ -57,19 +57,21 @@
             <img src="assets/bioPic.png" alt="bioPic" />
           </div>
           <div>
-            <h3>Jr Full-Stack Web Developer</h3>
+            <h3>React JS - Full Stack Web Developer</h3>
             <p class="personalStatement">
               I am an enthusiastic, self-disciplined and motivated worker. I
-              have demonstrated an ability to work on teams and with management,
-              as well as learn new skills and work remotely. My experience at
-              PunchCode opened a world of excitement and opportunity and I am
-              enjoying making consistent progress towards my goal of becoming a
-              more seasoned developer.
+              have the ability to work on teams and with management, as well as
+              learn new skills and work remotely. I would like to find a work
+              environment where I can continue to learn from others while
+              becoming a valuable member of a team.
             </p>
           </div>
-          <a href="https://youtu.be/dUDo47D2mQ8" target="_blank" class="btn"
-            >Watch My Bio Video</a
+          <a href="assets/resumeDeveloper.pdf" class="btn" target="_blank"
+            >PDF Resume</a
           >
+          <!-- <a href="https://youtu.be/dUDo47D2mQ8" target="_blank" class="btn"
+            >Watch My Bio Video</a
+          > -->
         </div>
       </section>
       <section id="education">
@@ -98,7 +100,7 @@
       <section id="employment-history">
         <h2>Employment History</h2>
         <div class="long-line"></div>
-        <div>
+        <!-- <div>
           <ul>
             <li><h4 h4 class="employers">Technology Credit Union</h4></li>
             <li>
@@ -130,51 +132,59 @@
           this remote agent pilot program a success. My specific
           responsibilities included all banking verification and full account
           services for our customers.
+        </p> -->
+        <div>
+          <ul>
+            <li>
+              <span class="positions"
+                >TruLocal, Inc - React JS Software Engineer</span
+              >
+            </li>
+          </ul>
+          <ul>
+            <li class="locations">Remote (CA Bay Area based company)</li>
+            <li class="dates">Sept. 2020​ to Current</li>
+          </ul>
+        </div>
+        <p>
+          My responsibilities at TruLocal have been primarily dedicated to the
+          Search route of the website. I was hired to create a dynamic front end
+          user experience utilizing Material-UI react components and a search
+          engine interface powered by Algolia. My team was supplied Figma
+          designs and kept version control using Atlassian BitBucket while using
+          JIRA tickets and Confluence resource pages to collaborate. I
+          participated in daily stand-ups and weekly sprints with the
+          development team. Having been one of the most familiar with Algolia, I
+          was frequently asked to educate teammates on the best implementation
+          strategy of the search results in their tasks.
         </p>
         <div>
           <ul>
             <li>
               <span class="positions"
-                >Business Development / Auto Loan Channel</span
+                >Technology Credit Union - IDL Manager / Business Development /
+                Sr. Banker</span
               >
             </li>
           </ul>
           <ul>
-            <li class="locations">San Jose, CA</li>
-            <li class="dates">Feb. 2016 to Dec. 2018</li>
+            <li class="locations">SF Bay Area, CA</li>
+            <li class="dates">Spring 2014​ to Winter 2019​</li>
           </ul>
         </div>
         <p>
-          My role in Business Development for TechCU's auto loan channel was to
-          improve, expand and maintain our working relationships with the
-          franchise auto dealers in the San Jose Region. I made regular in
-          person dealer account calls in order to promote TechCU products as
-          well as resolve in process loan application issues for our customers.
-          To ensure a smooth process for our customers, I collaborated with
-          dealer contacts, TechCU's banking staff, and the Underwriting
-          Department.
+          After leaving San Jose, CA to move to Las Vegas, NV, TechCU offered me
+          the opportunity to pilot a new remote role at the Credit Union. TechCU
+          was looking for the right employee candidate to test this program due
+          to the discipline required and security concerns of working in real
+          time with customer banking details from home. The pilot included
+          cooperation with myself, IT, the Executive Team, the AVP and VP of the
+          Contact Center in order to make this project a success. We were
+          successful in that I was a fully functional Remote Contact Center
+          Specialist while living full-time in Las Vegas for the entire term of
+          the 12 month trial.
         </p>
-        <div>
-          <ul>
-            <li>
-              <span class="positions">Sr Relationship Banker</span>
-            </li>
-          </ul>
-          <ul>
-            <li class="locations">Dublin, CA</li>
-            <li class="dates">Mar. 2014 to Jan. 2016</li>
-          </ul>
-        </div>
-        <p>
-          Sr Relationship Banker responsibilities included all in branch
-          customer account services as well as currency inventory management.
-          Staff was expected to keep audit logs and maintain dual control on
-          currency movements in the vault. In addition to account services,
-          Branch staff exercised discretion on customer accounts and strict
-          compliance with all banking regulations. Our Branch was run by a small
-          team and cooperation was key to our success.
-        </p>
-        <div>
+        <!-- <div>
           <ul>
             <li><h4 class="employers">Carnival Cruise Lines</h4></li>
             <li>
@@ -213,7 +223,7 @@
           Mortgage Solutions. I left the job due to the 2008 mortgage crisis,
           there were no home loans available and no customers purchasing at that
           time.
-        </p>
+        </p> -->
       </section>
 
       <!-- Technology Experience -->
@@ -250,7 +260,7 @@
           <a href="projects.html#capstone-project" class="btn"
             >Explore Jurn(<span>ease</span>)</a
           >
-          <a href="assets/resume.pdf" class="btn" target="_blank">PDF Resume</a>
+          <!-- <a href="assets/resume.pdf" class="btn" target="_blank">PDF Resume</a> -->
         </div>
       </section>
     </div>
