added TruLocal image and project info

--- a/projects.html
+++ b/projects.html
@@ -52,11 +52,32 @@
       <section id="capstone-project">
         <div class="long-line"></div>
         <h2>CURRENT WORK</h2>
-        <h3>TruLocal, Inc - Primary responsibility on Search Route</h3>
+        <h3>TruLocal, Inc - Built with React</h3>
+        <div class="long-line"></div>
+        <div id="capstone-project-img-truLocal"></div>
+        <h3>Project Description</h3>
+        <p>
+          TruLocal is an e-commerce marketplace focused on local retailers. The
+          mission of the site is to provide an efficient bridge between
+          consumers and their local retailers across all product categories.
+        </p>
+        <br />
+        <p>
+          Utilizing Material-UI react components and a search engine interface
+          powered by Algolia, my team was supplied Figma designs and kept
+          version control using Atlassian BitBucket. We worked together using
+          JIRA tickets and Confluence resource pages to collaborate.
+        </p>
+        <br />
+        <p>
+          My responsibilities were primarily based on the Search route, creating
+          a responsive UI in both desktop and mobile and wiring the search
+          interface with Algolia.
+        </p>
+
         <a href="https://trulocal.com/" target="_blank" class="btn"
           >www.trulocal.com</a
         >
-        <div class="long-line"></div>
         <div class="long-line"></div>
         <h2>CAPSTONE PROJECT</h2>
         <h3>
@@ -65,6 +86,7 @@
         </h3>
         <div class="long-line"></div>
         <div id="capstone-project-img"></div>
+
         <h3>Project Description</h3>
         <p>
           Jurn(<span>ease</span>) is a group vacation planning tool that allows
